<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyBrowser</string>
    <string name="bookmarks">书签</string>
    <string name="speed_dial">快速拨号</string>
    <string name="sign_in">登录</string>
    <string name="sign_out">退出登录</string>
    <string name="sync">上传到云端</string>
    <string name="download_from_cloud">从云端下载</string>
    <string name="upload_success">上传成功</string>
    <string name="download_success">下载成功</string>
    <string name="uploading">正在上传…</string>
    <string name="downloading">正在下载…</string>
    <string name="add_bookmark">添加书签</string>
    <string name="add_speed_dial">添加快速拨号</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="title">标题</string>
    <string name="url">网址</string>
    <string name="search_or_url">搜索或输入网址</string>
    <string name="no_bookmarks">暂无书签</string>
    <string name="no_speed_dials">暂无快速拨号\n点击 + 添加</string>
    <string name="sync_success">同步成功</string>
    <string name="sync_failed">同步失败：%s</string>
    <string name="please_login">请先登录以使用同步功能</string>
    <string name="bookmark_added">已添加书签</string>
    <string name="bookmark_exists">该网页已在书签中</string>
    <string name="bookmark_deleted">书签已删除</string>
    <string name="speed_dial_added">快速拨号已添加</string>
    <string name="confirm_delete">确认删除？</string>
    <string name="confirm_delete_message">确定要删除"%s"吗？</string>
    <string name="syncing">正在同步…</string>
    <string name="login_with_google">使用 Google 账号登录</string>
    <string name="login_with_email">使用邮箱登录</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="icon_url">图标网址（可选）</string>
    <string name="edit_speed_dial">编辑快速拨号</string>
    <string name="new_folder">新建文件夹</string>
    <string name="folder_name">文件夹名称</string>
    <string name="move_to_folder">移入文件夹</string>
    <string name="remove_from_folder">移出文件夹</string>
    <string name="rename_folder">重命名文件夹</string>
    <string name="rename_bookmark">重命名书签</string>
    <string name="delete_folder">删除文件夹</string>
    <string name="delete_folder_message">删除文件夹"%s"？\n文件夹内的快速拨号将移回首页</string>
    <string name="no_folder">不归组（留在首页）</string>
    <string name="import_bookmarks">导入Chrome书签</string>
    <string name="import_success">成功导入 %d 个书签</string>
    <string name="import_cancelled">已取消导入</string>
    <string name="download_confirm">下载文件</string>
    <string name="download_confirm_message">是否下载 \"%s\"？</string>
    <string name="download_started">开始下载：%s</string>
    <string name="download_complete">下载完成：%s</string>
    <string name="download_failed">下载失败：%s</string>
    <string name="download_need_permission">需要存储权限才能下载文件</string>
    <string name="file_chooser_unavailable">无法打开文件选择器</string>
    <string name="download_image">下载图片</string>
    <string name="image_saved">图片已保存：%s</string>
    <string name="image_save_failed">图片保存失败</string>
</resources>
