<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_bookmarks"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/bookmarks" />
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history"
        android:title="历史记录" />
    <item
        android:id="@+id/action_add_bookmark"
        android:icon="@drawable/ic_add"
        android:title="@string/add_bookmark" />
    <item
        android:id="@+id/action_add_speed_dial"
        android:icon="@drawable/ic_add"
        android:title="@string/add_speed_dial" />
    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_sync"
        android:title="@string/sync" />
    <item
        android:id="@+id/action_batch_delete"
        android:icon="@drawable/ic_delete"
        android:title="批量删除" />
    <item
        android:id="@+id/action_login"
        android:icon="@drawable/ic_person"
        android:title="@string/sign_in" />
</menu>
